--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ web_root: /var/www
 # Set the path to the local repository
 repository_path: "/var/repo"
 
+max_post_size: 32M
+
 database_config:
   user: phabricator
   pass: secret
@@ -25,6 +27,7 @@ mysql_cnf_config:
   sql_mode: STRICT_ALL_TABLES
   innodb_buffer_pool_size: 1000M
   local_infile: 0
+  datadir: "/var/lib/mysql"
 sudo_group: root
 permissions:
   vcs: "ALL=(phab-daemon) SETENV:NOPASSWD: /usr/lib/git-core/git-upload-pack, /usr/lib/git-core/git-receive-pack, /usr/lib/git-core/git-http-backend"
